--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "devDependencies": {
     "@folio/eslint-config-stripes": "^4.2.0",
-    "@folio/stripes": "^2.11.0",
+    "@folio/stripes": "^3.0.0",
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "eslint": "^6.2.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-intl": "^2.7.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
@@ -37,7 +37,11 @@
     "dom-helpers":"^3.4.0"
   },
   "peerDependencies": {
-    "@folio/stripes": "^2.11.0",
-    "react": "*"
+    "@folio/stripes": "^3.0.0",
+    "react": "*",
+    "react-dom": "*",
+    "react-intl": "*",
+    "react-redux": "*",
+    "redux": "*"
   }
 }
