--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=6.0.0"
   },
   "stripes": {
-    "type": "plugin",
+    "actsAs": ["plugin"],
     "pluginType": "find-erm-usage-data-provider",
     "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title"
   },
