--- a/package.json
+++ b/package.json
@@ -11,37 +11,52 @@
     "node": ">=6.0.0"
   },
   "stripes": {
-    "actsAs": ["plugin"],
+    "actsAs": [
+      "plugin"
+    ],
     "pluginType": "find-erm-usage-data-provider",
     "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title"
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "echo 'placeholder. no tests implemented'"
+    "test": "stripes test karma"
   },
   "devDependencies": {
+    "@bigtest/interactor": "^0.9.2",
+    "@bigtest/mocha": "^0.5.2",
+    "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^5.2.0",
     "@folio/stripes": "^5.0.0",
+    "@folio/stripes-core": "^6.0.0",
     "babel-eslint": "^9.0.0",
+    "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
+    "core-js": "^3.6.4",
     "eslint": "^6.2.1",
+    "faker": "^4.1.0",
+    "inflected": "^2.0.4",
+    "miragejs": "^0.1.40",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^4.5.3",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "react-router-dom": "^5.1.0",
+    "redux": "^4.0.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "dom-helpers": "^3.4.0",
     "lodash": "^4.17.11",
-    "prop-types": "^15.6.0",
-    "dom-helpers":"^3.4.0"
+    "prop-types": "^15.6.0"
   },
   "peerDependencies": {
     "@folio/stripes": "^5.0.0",
     "react": "*",
     "react-dom": "*",
-    "react-intl": "^4.5.3",
+    "react-intl": "^5.7.0",
     "react-redux": "*",
+    "react-router-dom": "^5.1.0",
     "redux": "*"
   }
 }
