--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
     "eslint": "^6.2.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
     "faker": "^4.1.0",
     "inflected": "^2.0.4",
     "miragejs": "^0.1.40",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-intl": "^4.5.3",
+    "react-intl": "^5.7.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.1.0",
     "redux": "^4.0.0",
