--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^5.2.0",
     "@folio/stripes": "^6.0.0",
+    "@folio/stripes-cli": "^2.0.0",
     "@folio/stripes-core": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-polyfill": "^6.26.0",
