--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title"
   },
   "scripts": {
-    "lint": "eslint .",
-    "test": "stripes test karma"
+    "test": "stripes test karma",
+    "lint": "eslint src",
+    "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-plugin-find-erm-usage-data-provider ./translations/ui-plugin-find-erm-usage-data-provider/compiled"
   },
   "devDependencies": {
     "@bigtest/interactor": "^0.9.2",
@@ -29,6 +30,7 @@
     "@folio/stripes": "^6.0.0",
     "@folio/stripes-cli": "^2.0.0",
     "@folio/stripes-core": "^7.0.0",
+    "@formatjs/cli": "^4.2.17",
     "babel-eslint": "^9.0.0",
     "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
