--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-plugin-find-erm-usage-data-provider ./translations/ui-plugin-find-erm-usage-data-provider/compiled"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@bigtest/interactor": "^0.9.2",
     "@bigtest/mocha": "^0.5.2",
     "@bigtest/react": "^0.1.2",
-    "@folio/eslint-config-stripes": "^5.2.0",
+    "@folio/eslint-config-stripes": "^6.1.0",
     "@folio/stripes": "^7.0.0",
     "@folio/stripes-cli": "^2.0.0",
     "@folio/stripes-core": "^8.0.0",
     "@formatjs/cli": "^4.2.17",
-    "babel-eslint": "^9.0.0",
     "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
-    "eslint": "^6.2.1",
+    "eslint": "^7.32.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "faker": "^4.1.0",
     "inflected": "^2.0.4",
