--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "eslint-plugin-jest": "^24.1.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "react": "^17.0.2",
