--- a/package.json
+++ b/package.json
@@ -15,44 +15,46 @@
       "plugin"
     ],
     "pluginType": "find-erm-usage-data-provider",
-    "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title"
+    "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title",
+    "stripesDeps": [
+      "@folio/stripes-acq-components"
+    ]
   },
   "scripts": {
-    "test": "stripes test karma",
+    "test": "yarn run test:jest",
+    "test:jest": "jest --ci --coverage --silent",
     "lint": "eslint .",
     "build-mod-descriptor": "stripes mod descriptor --full --strict | jq '.[]' > module-descriptor.json ",
     "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-plugin-find-erm-usage-data-provider ./translations/ui-plugin-find-erm-usage-data-provider/compiled"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
-    "@bigtest/interactor": "^0.9.2",
-    "@bigtest/mocha": "^0.5.2",
-    "@bigtest/react": "^0.1.2",
+    "@babel/plugin-transform-runtime": "^7.0.0",
     "@folio/eslint-config-stripes": "^6.1.0",
     "@folio/stripes": "^7.0.0",
-    "@folio/stripes-cli": "^2.0.0",
+    "@folio/stripes-cli": "~2.5.0",
     "@folio/stripes-core": "^8.0.0",
+    "@folio/stripes-components": "^10.0.0",
+    "@folio/stripes-smart-components": "^7.0.0",
     "@formatjs/cli": "^4.2.17",
-    "babel-polyfill": "^6.26.0",
-    "chai": "^4.2.0",
-    "core-js": "^3.6.4",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.6.2",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "faker": "^4.1.0",
-    "inflected": "^2.0.4",
-    "miragejs": "^0.1.40",
+    "eslint-plugin-jest": "^24.1.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.7.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0",
-    "regenerator-runtime": "^0.13.3"
+    "redux": "^4.0.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
+    "@folio/stripes-acq-components": "^2.2.0",
     "dom-helpers": "^3.4.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.0"
