--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "test": "yarn run test:jest",
-    "test:jest": "jest --ci --coverage --silent",
+    "test:jest": "jest --ci --coverage",
     "lint": "eslint .",
     "build-mod-descriptor": "stripes mod descriptor --full --strict | jq '.[]' > module-descriptor.json ",
     "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-plugin-find-erm-usage-data-provider ./translations/ui-plugin-find-erm-usage-data-provider/compiled"
@@ -38,8 +38,8 @@
     "@folio/eslint-config-stripes": "^6.1.0",
     "@folio/stripes": "^8.0.0",
     "@folio/stripes-cli": "~2.5.0",
-    "@folio/stripes-core": "^9.0.0",
     "@folio/stripes-components": "^11.0.0",
+    "@folio/stripes-core": "^9.0.0",
     "@folio/stripes-smart-components": "^8.0.0",
     "@formatjs/cli": "^4.2.17",
     "@testing-library/jest-dom": "^5.11.5",
