--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/plugin-find-erm-usage-data-provider",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "ERM-Usage-data-provider-finder for Stripes",
   "repository": "folio-org/ui-plugin-find-erm-usage-data-provider",
   "publishConfig": {
@@ -32,12 +32,12 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "@folio/eslint-config-stripes": "^6.1.0",
-    "@folio/stripes": "^8.0.0",
-    "@folio/stripes-cli": "~2.5.0",
-    "@folio/stripes-components": "^11.0.0",
-    "@folio/stripes-core": "^9.0.0",
-    "@folio/stripes-smart-components": "^8.0.0",
+    "@folio/eslint-config-stripes": "^7.0.0",
+    "@folio/stripes": "^9.0.0",
+    "@folio/stripes-cli": "^3.0.0",
+    "@folio/stripes-components": "^12.0.0",
+    "@folio/stripes-core": "^10.0.0",
+    "@folio/stripes-smart-components": "^9.0.0",
     "@formatjs/cli": "^4.2.17",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
@@ -48,8 +48,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intl": "^5.7.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.0"
@@ -64,9 +64,9 @@
     "postcss-nesting": "^10.2.0"
   },
   "peerDependencies": {
-    "@folio/stripes": "^8.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@folio/stripes": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intl": "^5.7.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.0"
