--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^5.7.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "dependencies": {
     "dom-helpers": "^3.4.0",
@@ -57,7 +56,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^5.7.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0"
+    "react-router-dom": "^5.2.0"
   }
 }
