--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.6.0"
   },
+  "resolutions": {
+    "postcss-nesting": "^10.2.0"
+  },
   "peerDependencies": {
     "@folio/stripes": "^8.0.0",
     "react": "^17.0.2",
