--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/plugin-find-erm-usage-data-provider",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "ERM-Usage-data-provider-finder for Stripes",
   "repository": "folio-org/ui-plugin-find-erm-usage-data-provider",
   "publishConfig": {
@@ -13,9 +13,6 @@
     ],
     "pluginType": "find-erm-usage-data-provider",
     "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title",
-    "stripesDeps": [
-      "@folio/stripes-acq-components"
-    ],
     "okapiInterfaces": {
       "aggregator-settings": "1.0",
       "erm-usage-harvester": "1.1",
@@ -31,44 +28,31 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@folio/eslint-config-stripes": "^6.1.0",
-    "@folio/stripes": "^8.0.0",
-    "@folio/stripes-cli": "~2.5.0",
-    "@folio/stripes-components": "^11.0.0",
-    "@folio/stripes-core": "^9.0.0",
-    "@folio/stripes-smart-components": "^8.0.0",
+    "@folio/eslint-config-stripes": "^7.0.0",
+    "@folio/jest-config-stripes": "^2.0.0",
+    "@folio/stripes": "^9.0.0",
+    "@folio/stripes-acq-components": "^5.0.0",
+    "@folio/stripes-cli": "^3.0.0",
+    "@folio/stripes-components": "^12.0.0",
+    "@folio/stripes-core": "^10.0.0",
+    "@folio/stripes-smart-components": "^9.0.0",
     "@formatjs/cli": "^4.2.17",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.6.2",
-    "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intl": "^5.7.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "dependencies": {
-    "@folio/stripes-acq-components": "^4.0.0",
     "dom-helpers": "^3.4.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.0"
   },
-  "resolutions": {
-    "postcss-nesting": "^10.2.0"
-  },
   "peerDependencies": {
-    "@folio/stripes": "^8.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@folio/stripes": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intl": "^5.7.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0"
+    "react-router-dom": "^5.2.0"
   }
 }
