--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "displayName": "ui-plugin-find-erm-usage-data-provider.meta.title",
     "okapiInterfaces": {
       "aggregator-settings": "1.0 2.0",
-      "erm-usage-harvester": "1.1",
+      "erm-usage-harvester": "1.1 2.0",
       "usage-data-providers": "2.0 3.0"
     }
   },
