--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/plugin-find-erm-usage-data-provider",
-  "version": "6.2.0",
+  "version": "7.0.0",
   "description": "ERM-Usage-data-provider-finder for Stripes",
   "repository": "folio-org/ui-plugin-find-erm-usage-data-provider",
   "publishConfig": {
@@ -24,7 +24,7 @@
     "test:jest": "jest --ci --coverage",
     "lint": "eslint .",
     "build-mod-descriptor": "stripes mod descriptor --full --strict | jq '.[]' > module-descriptor.json ",
-    "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-plugin-find-erm-usage-data-provider ./translations/ui-plugin-find-erm-usage-data-provider/compiled"
+    "formatjs-compile": "stripes translate compile"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -35,11 +35,10 @@
     "@folio/stripes-components": "^12.2.0",
     "@folio/stripes-core": "^10.2.0",
     "@folio/stripes-smart-components": "^9.2.0",
-    "@formatjs/cli": "^6.1.3",
     "eslint": "^7.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.4.4",
+    "react-intl": "^7.1.5",
     "react-router-dom": "^5.2.0"
   },
   "dependencies": {
@@ -51,7 +50,7 @@
     "@folio/stripes": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.4.4",
+    "react-intl": "^7.1.5",
     "react-router-dom": "^5.2.0"
   }
 }
